WIP on seeds.  Companies are working in part.  Looks more interesting now.

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -11,7 +11,7 @@
       <th>Active</th>
       <th>Bookkeeping number</th>
       <th>Line of business</th>
-      <th>Url</th>
+      <th>URL</th>
       <th>Licensee</th>
       <th colspan="3"></th>
     </tr>
