Working with partials and column nesting in index views.  These do not work.

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -14,4 +14,5 @@
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
-//   .status_tag { background: #6090DB; }
+// uncommented 03/10/2019, no visible effect
+   .status_tag { background: #6090DB; }
