--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -7,28 +7,40 @@
           %li= message
 
   .field
-    = f.label :company
-    = f.text_field :company
+    = f.label :street_address,
+    = f.text_field :street_address,
   .field
-    = f.label :street{30}
-    = f.text_field :street{30}
+    = f.label :city,
+    = f.text_field :city,
   .field
-    = f.label :city{30}
-    = f.text_field :city{30}
+    = f.label :state,
+    = f.text_field :state,
   .field
-    = f.label :state{2}
-    = f.text_field :state{2}
-  .field
-    = f.label :post_code{10}
-    = f.text_field :post_code{10}
+    = f.label :po_box
+    = f.text_field :po_box
   .field
     = f.label :map_reference
     = f.text_field :map_reference
   .field
+    = f.label :longitude
+    = f.text_field :longitude
+  .field
     = f.label :latitude
     = f.text_field :latitude
   .field
-    = f.label :longitude
-    = f.text_field :longitude
+    = f.label :company
+    = f.text_field :company
+  .field
+    = f.label :person
+    = f.text_field :person
+  .field
+    = f.label :identifier
+    = f.text_field :identifier
+  .field
+    = f.label :cert
+    = f.text_field :cert
+  .field
+    = f.label :requirement
+    = f.text_field :requirement
   .actions
     = f.submit 'Save'
