Landing page in place with link and image, uses .haml.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,13 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.haml
 
-%p ... where to now?  Use menu in urhc to sign in?
+
+%center
+  %h1 Roll365
+  %h1 Blockchain based software for shippers and their agents
+  %h2 Protocol and UX research version on Fr8.Network
+
+%center
+  %h1
+    = link_to 'Dashboard', admin_dashboard_path
+  %p
+    // search path default is public/images
+    = image_tag "truck.jpg", :size => "520x360" 
