Landing page background, link to Dashboard.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,7 +7,7 @@
 
 %center
   %h1
-    = link_to 'Dashboard', admin_dashboard_path
+    = link_to 'Admin Dashboard', admin_dashboard_path
   %p
     // search path default is public/images
     = image_tag "truck.jpg", :size => "520x360" 
