Footer paths are generated through get verb definitions in routes.rb and rely on show method of welcome controlle using content files in views welcome folder.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,9 @@
 %center
   %h1 Roll365
   %h1 Blockchain based software for shippers and their agents
-  %h2 Protocol and UX research version on Fr8.Network
+  %h2 Protocol and UX research version on 
+  %h3 
+    = link_to "Fr8.Network", "https://Fr8.network", :target => "_blank"
 
 %center
   %h1
