--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Roll365, Roll365</title>
+    <title>Roll365 R&D Beta</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,11 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  
+  
+  <%= yield %>
+  <%= render '/shared/footer' %>
+
   </body>
 </html>
