Roll365 CRUD operations pages are defined and have valid paths.  TODO is create path that routes between Admin Dashboard view and Use Case oriented pages.  Lots better to illustrate concepts now though.

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,7 +3,28 @@
   %p Roll365.com does not employ, recommend or endorse any agent, carrier or shipper nor is it responsible for the conduct of any agent, carrier or shipper. Roll365.com provides information and tools to help agents, carriers and shippers make informed decisions.   Where appropriate such services are built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.
 
 %hr
-
+%center
+  = link_to 'Dashboard', admin_dashboard_path
+  = link_to 'Companies', companies_path
+  = link_to 'People', people_path
+  = link_to 'Projects', projects_path
+  = link_to 'Conditions', conditions_path
+  = link_to 'Dockets', dockets_path
+  = link_to 'Engagements', engagements_path
+  = link_to 'Equipment', equipments_path
+  = link_to 'Identifiers', identifiers_path
+  = link_to 'Jobs', jobs_path
+  = link_to 'Materials', materials_path
+  = link_to 'Permits', permits_path
+  = link_to 'Quotes', quotes_path
+  = link_to 'Requirements', requirements_path
+  = link_to 'Reservations', reservations_path
+  = link_to 'Schedules', schedules_path
+  = link_to 'Solutions', solutions_path
+  = link_to 'Solution_tips', solution_tips
+  = link_to 'Tips', tips_path
+  
+%hr
 %center
 
   = link_to 'Home', root_path
