--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,6 +5,8 @@
   %h1 Blockchain based software for shippers and their agents
   %h2 Protocol and UX research version on 
   %h3 
+    = link_to 'Roll365', welcome_index_path
+    &nbsp;
     = link_to "Fr8.Network", "https://Fr8.network", :target => "_blank"
 
 %center
