--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -7,12 +7,16 @@
   = link_to 'Dashboard', admin_dashboard_path
   = link_to 'Companies', companies_path
   = link_to 'People', people_path
+  &nbsp;
   = link_to 'Projects', projects_path
   = link_to 'Conditions', conditions_path
   = link_to 'Dockets', dockets_path
   = link_to 'Engagements', engagements_path
   = link_to 'Equipment', equipments_path
+  
+  = link_to 'Addresses', addresses_path
   = link_to 'Identifiers', identifiers_path
+
   = link_to 'Jobs', jobs_path
   = link_to 'Materials', materials_path
   = link_to 'Permits', permits_path
