Landing page cleanup for now.  No dashboard page is defined outside of Admin at this point.  Problem:  'permit' is a method name in params oblect.  Kill off this model and replace with something like licence/licenses or go back to certificate.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,15 +3,55 @@
 %center
   %h1 Roll365
   %h1 Blockchain based software for shippers and their agents
-  %h2 Protocol and UX research version on 
+  %h2 Protocol and UX research version for Fr8.Network
+  
   %h3 
-    = link_to 'Roll365', welcome_index_path
+    = link_to 'Admin Dashboard', admin_dashboard_path
     &nbsp;
     = link_to "Fr8.Network", "https://Fr8.network", :target => "_blank"
 
 %center
-  %h1
-    = link_to 'Admin Dashboard', admin_dashboard_path
+
+  = link_to 'Companies', companies_path
+  &nbsp;
+  = link_to 'People', people_path
+  &nbsp;
+  = link_to 'Projects', projects_path
+  &nbsp;
+  = link_to 'Conditions', conditions_path
+  &nbsp;
+  = link_to 'Dockets', dockets_path
+  &nbsp;
+  = link_to 'Engagements', engagements_path
+  &nbsp;
+  = link_to 'Equipment', equipments_path
+  &nbsp;
+  = link_to 'Addresses', addresses_path
+  &nbsp;
+  = link_to 'Identifiers', identifiers_path
+  &nbsp;
+  = link_to 'Jobs', jobs_path
+  &nbsp;
+  = link_to 'Materials', materials_path
+  &nbsp;
+  = link_to 'Permits', permits_path
+  &nbsp;
+  = link_to 'Quotes', quotes_path
+  &nbsp;
+  = link_to 'Requirements', requirements_path
+  &nbsp;
+  = link_to 'Reservations', reservations_path
+  &nbsp;
+  = link_to 'Schedules', schedules_path
+  &nbsp;
+  = link_to 'Solutions', solutions_path
+  &nbsp;
+  = link_to 'Tips', tips_path
+
+%center
+
+  %p
+  %p
   %p
     // search path default is public/images
     = image_tag "truck.jpg", :size => "520x360" 
