Addresses CRUD views are working.  Magic wand is method constantize to create instances of any class from the string of its name.  So if you have addressable_type you can use constantize to create an instance of 'Compay' for example.  Neat.

--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -1,5 +1,8 @@
-%h1 Editing address for #{@address.addressable_type} 
+%h1 Editing address for #{@name}
 
+%p
+  %b Parent type:
+  = @address.addressable_type
 
 = render 'form'
 
