--- a/app/views/addresses/show.html.haml
+++ b/app/views/addresses/show.html.haml
@@ -1,8 +1,8 @@
 %p#notice= notice
 
-%h1 Address for #{@address.addressable_type} 
+%h1 Address for #{@name}
 %p
-  %b Address for @name:
+  %b Parent type:
   = @address.addressable_type
 %p
   %b Street address:
