Identifiers are doing crud operations and showing parent names properly.  Key is to use a parent_name method in the models.  Spent a day trying to generalize this, but in the end a case statement dows the trick.  Easy to maintain, equally easy to forget.

--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -4,16 +4,20 @@
   %thead
     %tr
       %th Parent Type
+      %th Parent Name
       %th Parent Id
-      %th Name
+      %th Kind
       %th Value
       %th Rank
       
 
   %tbody
     - @identifiers.each do |i|
+
       %tr
+      
         %td= i.identifiable_type
+        %td= i.display_name
         %td= i.identifiable_id
         %td= i.name
         %td= i.value
