--- a/app/views/identifiers/_form.html.haml
+++ b/app/views/identifiers/_form.html.haml
@@ -6,18 +6,13 @@
         - @identifier.errors.full_messages.each do |message|
           %li= message
 
+
   .field
-    = f.label :company
-    = f.text_field :company
+    = f.label :name
+    = f.text_field :name
   .field
-    = f.label :person
-    = f.text_field :person
-  .field
-    = f.label :name{30}
-    = f.text_field :name{30}
-  .field
-    = f.label :value{30}
-    = f.text_field :value{30}
+    = f.label :value
+    = f.text_field :value
   .field
     = f.label :rank
     = f.number_field :rank
