--- a/app/views/identifiers/edit.html.haml
+++ b/app/views/identifiers/edit.html.haml
@@ -1,4 +1,8 @@
-%h1 Editing identifier
+%h1 Editing identifier #{@name}
+
+%p
+  %b Parent type:
+  = @identifier.identifiable_type
 
 = render 'form'
 
