Address now uses display_name method to locate parent to get name of that.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -4,6 +4,7 @@
   %thead
     %tr
       %th Parent Type
+      %th Parent Name
       %th Street address
       %th City
       %th State
@@ -19,6 +20,7 @@
     - @addresses.each do |addr|
       %tr
         %td= addr.addressable_type
+        %td= addr.display_name
         %td= addr.street_address
         %td= addr.city
         %td= addr.state
