Revised model to use display_parent_name which is not reliant on a case statement.  Every parent is assumed to have a name property though.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -20,7 +20,7 @@
     - @addresses.each do |addr|
       %tr
         %td= addr.addressable_type
-        %td= addr.display_name
+        %td= addr.display_parent_name
         %td= addr.street_address
         %td= addr.city
         %td= addr.state
