Identifier index names working.  When name attribute is not found we have to use something to avoid a method not found crash.  These are silent and appear to arise in the index view, but they don't, the occur in the display_parent_name() in the model Identifier.rb.

--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -15,9 +15,9 @@
     - @identifiers.each do |i|
 
       %tr
-      
+        
         %td= i.identifiable_type
-        %td= i.display_name
+        %td= i.display_parent_name
         %td= i.identifiable_id
         %td= i.name
         %td= i.value
