Pagination in effect for Addresses and Identifiers.

--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -9,3 +9,6 @@
 = link_to 'Show', @address
 \|
 = link_to 'Back', addresses_path
+\|
+= button_to 'Back', addresses_path, :method => "get"
+= button_to "Show", action: "show"
