--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -10,7 +10,7 @@
   = ' | '
   = link_to "Logon or Register", admin_root_path
   = ' | '
-  = link_to 'Home', home_path
+  = link_to 'Home', root
   = '  --  '
   = link_to 'About Us', about_path
   = ' | '
