Companies will_paginate installed.  Note:  the Company views are .erb files.  Address and Identifier are *.html.haml.  Not sure how this came about.

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -33,9 +33,14 @@
         <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
+  </tbody>  
 </table>
+
+<%= will_paginate @companies %>
+
 
 <br>
 
 <%= link_to 'New Company', new_company_path %>
+
+
