--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,14 +7,11 @@
           
   %p.floatright
   = link_to "Dashboard", admin_dashboard_path
-  = ' | '
+  &nbsp;
   = link_to "Logon or Register", admin_root_path
-  = ' | '
-  = link_to 'Home', root
-  = '  --  '
-  = link_to 'About Us', about_path
-  = ' | '
-  = link_to 'FAQ', faq_path
+  &nbsp;
+  = link_to 'Home', root_path
+  
   
 
   %br
