Dashboard created.  Used to display possible use cases.  Added config/initializers/haml.rb

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -6,13 +6,11 @@
 
           
   %p.floatright
-  = link_to "Dashboard", admin_dashboard_path
+  = link_to "Dashboard", dashboard_path
   &nbsp;
   = link_to "Logon or Register", admin_root_path
   &nbsp;
   = link_to 'Home', root_path
   
-  
-
   %br
   %br
