Removed two instances of 'byebug' that got left in.

--- a/app/views/welcome/dashboard.html.haml
+++ b/app/views/welcome/dashboard.html.haml
@@ -35,15 +35,16 @@
   
 
   %li= button_to "Books"
-  %p Invoice Management
-
-%whoo
-  %hoo= h(                       |
-    "I think this might get " +  |
-    "pretty long so I should " + |
-    "probably make it " +        |
-    "multiline so it doesn't " + |
-    "look awful.")               |
-  %p This is short.
+  %p Invoice Management |
+  
+  which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |which would entail invoices generated, |
+  tracked and paid? |
   
 
