Addresses, Companies and People are paginated with kamineri.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -1,3 +1,8 @@
+
+//= paginate @addresses
+= paginate @addresses, :left => 1, :right => 3
+//= paginate @addresses, :outer_window => 3
+
 %h1 Listing addresses
 
 %table
