--- a/app/views/welcome/dashboard.html.haml
+++ b/app/views/welcome/dashboard.html.haml
@@ -9,9 +9,6 @@
 %h3
   %ul
 
-  %li= button_to "Calls", root_path
-  %p Take/journal in-bound calls  -- who, what, players; free'ish format
-  
   
   %li= button_to "What's Going On"
   %p Calendar -- what deadlines are we facing?, what's been scheduled, e.g. today, tomorrow, rest of week
@@ -25,17 +22,17 @@
   %p Prospecting, marshalling, responding, status management
   
 
+  %li= button_to "Lanes"
+  %p Project Management -- create, supervise, find staff
+  Logistics, equipment, drivers, support 
   
-  %li= button_to "Projects"
-  %p Project Management -- create, supervise, find staffk
+  %li= button_to "Loads"
+  %p Quote based on one or more Solutions 
+  Routes & Schedules. 
   
 
-  %li= button_to "Haggle"
-  %p Create a Quote based on one or more Solutions
-  
-
-  %li= button_to "Books"
-  %p Invoice Management |
+  %li= button_to "Bookkeeping"
+  %p Invoice Management 
   
   which would entail invoices generated, |
   tracked and paid? |which would entail invoices generated, |
@@ -47,4 +44,3 @@
   tracked and paid? |which would entail invoices generated, |
   tracked and paid? |
   
-
