--- a/app/views/welcome/dashboard.html.haml
+++ b/app/views/welcome/dashboard.html.haml
@@ -5,42 +5,33 @@
 %h1 
   %strong Use Cases -- What do you want to do?
 
-
-%h3
-  %ul
-
-  
-  %li= button_to "What's Going On"
+%h2
+  %p "What's Going On"
   %p Calendar -- what deadlines are we facing?, what's been scheduled, e.g. today, tomorrow, rest of week
   
-  
-  %li= button_to "Housekeeping"
+
+%h2  
+  %p "Housekeeping"
   %p Housekeeping (Static data) -- stuff like names & addresses, materials, conditions and so on
   
-  
-  %li= button_to "Prospecting"
+%h2
+  %p "Prospecting"
   %p Prospecting, marshalling, responding, status management
   
 
-  %li= button_to "Lanes"
+%h2
+  %p "Lanes"
   %p Project Management -- create, supervise, find staff
-  Logistics, equipment, drivers, support 
-  
-  %li= button_to "Loads"
-  %p Quote based on one or more Solutions 
-  Routes & Schedules. 
-  
+  %p Logistics, equipment, drivers, support 
 
-  %li= button_to "Bookkeeping"
+%h2
+  %p "Loads"
+  %p Quote based on one or more Solutions 
+  %p Routes & Schedules.   
+  
+%h2
+  %p "Bookkeeping"
   %p Invoice Management 
   
-  which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |which would entail invoices generated, |
-  tracked and paid? |
+  
   
