--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,7 +5,7 @@
   &nbsp;
   = link_to 'About Us', about_path
   &nbsp;
-  = link_to 'Advertise with us', advertise_path
+  = link_to 'Advertise', advertise_path
   &nbsp;
   = link_to 'FAQ', faq_path  
   &nbsp;
@@ -14,6 +14,8 @@
   = link_to 'Privacy Policy', privacy_path
   &nbsp;
   = link_to 'Terms and Conditions', tsandcs_path
+  &nbsp;
+  = link_to 'License', license_path
 
 %p
 %p
