--- a/app/views/welcome/dashboard.html.haml
+++ b/app/views/welcome/dashboard.html.haml
@@ -20,8 +20,8 @@
   
 
 %h2
-  %p "Lanes"
-  %p Project Management -- create, supervise, find staff
+  %p "Lanes & Lane Development"
+  %p Operations -- create, supervise, find staff
   %p Logistics, equipment, drivers, support 
 
 %h2
