--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -22,6 +22,6 @@
 %hr
 %p
   %p 
-  %small Roll365.com does not employ, recommend or endorse any agent, carrier or shipper nor is it responsible for the conduct of any agent, carrier or shipper. Roll365.com provides information and tools to help agents, carriers and shippers make informed decisions.   Where appropriate such services are built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.
+  %small Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor is it responsible for the conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers, carriers and shippers make informed decisions.   Where appropriate such services are built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.
 
 %hr
