--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,7 @@
 %center
   %h1 Roll365
   %h1 Blockchain based software for shippers and their agents
-  %h2 Protocol and UX research version for Fr8.Network
+  %h2 PoC and UX research version for Fr8.Network protocol
   
   %h3 
     = link_to 'Admin Dashboard', admin_dashboard_path
