--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -19,7 +19,7 @@
     - @projects.each do |project|
       %tr
         %td= project.name
-        %td= project.company_id
+        %td= project.company.name
         %td= project.rep_id
         %td= project.project_start_on
         %td= project.description
