Embedded form for Company address.  Works very well under New, Edit, Show.

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -40,5 +40,10 @@
   <%= @company.licensee %>
 </p>
 
+<p>
+  <strong>Address:</strong>
+  <%= @company.address %>
+</p>
+
 <%= link_to 'Edit', edit_company_path(@company) %> |
 <%= link_to 'Back', companies_path %>
