--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -51,6 +51,42 @@
     <%= form.text_field :licensee %>
   </div>
 
+<h3> Edit Address </h3>
+<p>
+  
+  <%= @company.address %>
+</p>
+  <%= form.fields_for :addresses do |address_form| %>
+    <div class="field">
+      <%= address_form.label :street_address %>
+      <%= address_form.text_field :street_address %>
+    </div>
+    <div class="field">
+      <%= address_form.label :city %>
+      <%= address_form.text_field :city %>
+    </div>
+    <div class="field">
+      <%= address_form.label :state %>
+      <%= address_form.text_field :state %>
+    </div>        
+    <div class="field">
+      <%= address_form.label :post_code %>
+      <%= address_form.text_field :post_code %>
+    </div>        
+     <div class="field">
+      <%= address_form.label :map_reference %>
+      <%= address_form.text_field :map_reference %>
+    </div>               
+    <div class="field">
+      <%= address_form.label :longitude %>
+      <%= address_form.text_field :longitude %>
+    </div>        
+    <div class="field">
+      <%= address_form.label :latitude %>
+      <%= address_form.text_field :latitude %>
+    </div>                
+  <% end %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
