--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,5 +1,8 @@
-<h1>Editing Company</h1>
-
+<h1> 
+  <%= @company.name %>
+</h1>
+<%= @company.address %>
+<hr>
 <%= render 'form', company: @company %>
 
 <%= link_to 'Show', @company %> |
