--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -13,7 +13,7 @@
       <th>Active</th>
       <th>Bookkeeping number</th>
       <th>Line of business</th>
-      <th>URL</th>
+      <th>Web Site</th>
       <th>Licensee</th>
       <th colspan="3"></th>
     </tr>
@@ -22,17 +22,23 @@
   <tbody>
     <% @companies.each do |company| %>
       <tr>
-        <td><%= company.name %></td>
+        <td><%= company.name%></td>
         <td><%= company.credit_terms %></td>
         <td><%= company.PO_required %></td>
         <td><%= company.active %></td>
         <td><%= company.bookkeeping_number %></td>
         <td><%= company.line_of_business %></td>
-        <td><%= company.url %></td>
+        
+        
+        <td><%= link_to truncate(company.url, :length => 140), "http://#{company.url}"  %>
+
         <td><%= company.licensee %></td>
         <td><%= link_to 'Show', company %></td>
         <td><%= link_to 'Edit', edit_company_path(company) %></td>
         <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td/>
+        <td/>
+        <td/>
       </tr>
     <% end %>
   </tbody>  
