--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Editing Person</h1>
+<h1>Edit Person</h1>
 
+<%= @person.address %>
+&nbsp;
+<%= @person.company_name %>
+
+<hr>
 <%= render 'form', person: @person %>
 
 <%= link_to 'Show', @person %> |
