--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -1,9 +1,9 @@
-= form_with(model: company, local: true) do |form|
-  -if company.errors.any?
+= form_for @company do |form|
+  - if @company.errors.any?
     #error_explanation
-      %h2= pluralize(company.errors.count, "error") #prohibited this company from being saved:
+      %h2= "#{pluralize(@company.errors.count, "error")} prohibited this permit from being saved:"
       %ul
-        - company.errors.full_messages.each do |message|
+        - @company.errors.full_messages.each do |message|
           %li= message
 
   .field
@@ -38,9 +38,8 @@
     = form.label :licensee
     = form.text_field :licensee
   
-  = render :partial => "shared/address_form", locals: {form: form}
+
 
   .actions
     = form.submit
   
-.end
