Missing address via addressability association now working for Company.  Need to implant this or something cleaner for People and Identifier.  Try to setup the parent or polymorphic attributes from the parent side, that doesn't lead to copying the code and paths for every relation.

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -7,6 +7,9 @@
 <table>
   <thead>
     <tr>
+
+      <th>ID</th>
+
       <th>Name</th>
       <th>Credit terms</th>
       <th>Po required</th>
@@ -22,6 +25,9 @@
   <tbody>
     <% @companies.each do |company| %>
       <tr>
+
+        <td><%= company.id%></td>
+
         <td><%= company.name%></td>
         <td><%= company.credit_terms %></td>
         <td><%= company.PO_required %></td>
