--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -1,9 +1,12 @@
+= form_with(model: @address, scope: :address) do |f|
+  = f.label :city, "Search for:" 
+  = f.text_field :city, id: :city
+  = f.submit "Search"
+
+%h1 Listing addresses
 
 //= paginate @addresses
 = paginate @addresses, :left => 1, :right => 3
-//= paginate @addresses, :outer_window => 3
-
-%h1 Listing addresses
 
 %table
   %thead
