--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,7 +1,7 @@
 <h1> 
   <%= @company.name %>
 </h1>
-<%= @company.address %>
+<%= @company.display_address %>
 <hr>
 <%= render 'form', company: @company %>
 
