--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  */
 
 @import 'bootstrap';
+
+body {
+  background-color: palegreen;
+
+  font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
+/* default is 1rem or 16px */
+font-size: 12px;
+font-weight: 400;
+line-height: 1.5;
+}
